feat: JSON処理とエミッタデータの改善
- `MaterialData` 構造体内で `vertices` と `materialData` に初期値を設定
- `DirectX12::CreateDSVAndSettingState` メソッドでステンシルテストを有効化
- `DX12Helper::LoadTexture` メソッドの引数を `std::string&` に変更
- `DX12Helper::CommandListCommonSetting` メソッドでポインタに `const` 修飾子を追加
- `Logger` クラスを `JsonLoader` から `JSONIO` に変更し、JSON処理を更新
- `EmitterData` 構造体に初期値を設定し、`ParticleEmitter` クラスのメソッドを修正
- `GameScene` クラスで `ParticleEmitter` の初期化と更新処理を有効化
- `Timer` クラスを削除し、`JSONIO` を使用してJSONの読み書きを実施
- `main.cpp` でアプリケーションのエントリーポイントを `SampleProgram` に変更

- JSONファイルのフォーマットを変更し、`emitterName` を `name` に変更
- `imgui.ini` のウィンドウ設定を調整

- `json.hpp` において、JSONデータ型の構築を容易にする `construct` メソッドを追加
- `EmitterData` 構造体の JSON との相互変換用の `from_json` と `to_json` 関数を追加
- `Color` クラスで色の管理を改善し、色の文字列から `RGBA` オブジェクトを生成する関数を追加
- `Vector3` と `Vector4` の JSON との相互変換を行う関数を追加
- `JSONIO` クラスを実装し、JSONデータの管理を効率化

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_AMD64_</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
@@ -111,12 +111,12 @@
       <AdditionalIncludeDirectories>$(ProjectDir)Resources\Shaders;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </FxCompile>
     <Lib>
-      <AdditionalDependencies>$(ProjectDir)Externals\JsonParser\$(Configuration)\JsonParser.lib;$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_AMD64_</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
@@ -146,7 +146,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)Resources\Shaders;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </FxCompile>
     <Lib>
-      <AdditionalDependencies>$(ProjectDir)Externals\JsonParser\$(Configuration)\JsonParser.lib;$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -184,7 +184,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)Resources\Shaders;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </FxCompile>
     <Lib>
-      <AdditionalDependencies>$(ProjectDir)Externals\JsonParser\$(Configuration)\JsonParser.lib;$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)Externals\WinTools\$(Configuration)\WinTools.lib;$(ProjectDir)Externals\Network\$(Configuration)\Network.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -230,6 +230,7 @@
     <ClCompile Include="Features\NiGui\NiGuiDrawer.cpp" />
     <ClCompile Include="Features\Object3d\Object3d.cpp" />
     <ClCompile Include="Features\Object3d\Object3dSystem.cpp" />
+    <ClCompile Include="Features\Particle\Emitter\EmitterData.cpp" />
     <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp" />
     <ClCompile Include="Features\Particle\Manager\EmitterManager.cpp" />
     <ClCompile Include="Features\Particle\Particle.cpp" />
@@ -247,7 +248,9 @@
     <ClCompile Include="Features\Text\TextSystem.cpp" />
     <ClCompile Include="Features\Viewport\Viewport.cpp" />
     <ClCompile Include="Framework\NimaFramework.cpp" />
+    <ClCompile Include="Type\Color.cpp" />
     <ClCompile Include="Utility\FilePathSearcher\FilePathSearcher.cpp" />
+    <ClCompile Include="Utility\JSONIO\JSONIO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseClasses\ObjectSystemBase.h" />
@@ -299,6 +302,7 @@
     <ClInclude Include="Features\NiGui\NiGuiDrawer.h" />
     <ClInclude Include="Features\Object3d\Object3d.h" />
     <ClInclude Include="Features\Object3d\Object3dSystem.h" />
+    <ClInclude Include="Features\Particle\Emitter\EmitterData.h" />
     <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h" />
     <ClInclude Include="Features\Particle\Manager\EmitterManager.h" />
     <ClInclude Include="Features\Particle\Particle.h" />
@@ -319,9 +323,12 @@
     <ClInclude Include="Framework\NimaFramework.h" />
     <ClInclude Include="Interfaces\IScene.h" />
     <ClInclude Include="Interfaces\ISceneFactory.h" />
+    <ClInclude Include="Type\Color.h" />
     <ClInclude Include="Utility\ConvertString\ConvertString.h" />
     <ClInclude Include="Utility\DIContainer\DIContainer.h" />
     <ClInclude Include="Utility\FilePathSearcher\FilePathSearcher.h" />
+    <ClInclude Include="Utility\JSONConvTypeFuncs\JSONConvTypeFuncs.h" />
+    <ClInclude Include="Utility\JSONIO\JSONIO.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\ClassDiagram.md" />
