--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -211,6 +211,15 @@
     <Filter Include="DebugTools\EventTimer">
       <UniqueIdentifier>{df5f5a1a-502e-4329-9008-38543f810d61}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Utility\JSONConvTypeFuncs">
+      <UniqueIdentifier>{0429575c-34a2-4428-96e4-79495d83d875}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utility\JSONIO">
+      <UniqueIdentifier>{158aa26d-4868-4d7d-a32e-aea18848c56f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Type">
+      <UniqueIdentifier>{716e7ea7-33a6-41be-84dc-73a74d4d0079}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp">
@@ -392,6 +401,15 @@
     </ClCompile>
     <ClCompile Include="DebugTools\EventTimer\EventTimer.cpp">
       <Filter>DebugTools\EventTimer</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Particle\Emitter\EmitterData.cpp">
+      <Filter>Feature\Particle\Emitter</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility\JSONIO\JSONIO.cpp">
+      <Filter>Utility\JSONIO</Filter>
+    </ClCompile>
+    <ClCompile Include="Type\Color.cpp">
+      <Filter>Type</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -610,6 +628,18 @@
     </ClInclude>
     <ClInclude Include="DebugTools\EventTimer\EventTimer.h">
       <Filter>DebugTools\EventTimer</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Particle\Emitter\EmitterData.h">
+      <Filter>Feature\Particle\Emitter</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\JSONConvTypeFuncs\JSONConvTypeFuncs.h">
+      <Filter>Utility\JSONConvTypeFuncs</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\JSONIO\JSONIO.h">
+      <Filter>Utility\JSONIO</Filter>
+    </ClInclude>
+    <ClInclude Include="Type\Color.h">
+      <Filter>Type</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
