--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -52,7 +52,7 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=24,29
+Pos=24,28
 Size=8,27
 Collapsed=0
 DockId=0x0000000A,0
@@ -559,18 +559,22 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x9697E386,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
-  DockNode      ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,565 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,670 Split=X Selected=0x13926F0B
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1152,450 CentralNode=1 Selected=0x13926F0B
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=446,450 Split=X Selected=0x8EDA8100
       DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=287,597 Selected=0x435A4E3F
       DockNode  ID=0x00000005 Parent=0x00000009 SizeRef=157,597 Selected=0x967E7699
-  DockNode      ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,333 Split=X Selected=0x64F50EE5
+  DockNode      ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,228 Split=X Selected=0x64F50EE5
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1181,301 Split=X Selected=0x64F50EE5
       DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=901,299 Selected=0x64F50EE5
       DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=278,299 Selected=0x3A93B30B
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=417,301 Split=Y Selected=0x627D110E
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,265 Selected=0x627D110E
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,160 Selected=0x627D110E
       DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=417,66 Selected=0x8EDA8100
 
