feat: CG4Task1クラスの初期化と描画処理を追加
- **ObjectSystemBase**: DirectX12に関連する新しいメソッドを追加し、グローバルなGameEyeポインタの設定と取得を可能にしました。

- **ModelHelper**: OBJファイルとマテリアルテンプレートファイルの読み込みメソッドを拡張し、テクスチャパスを引数として受け取るようにしました。

- **Model**: モデルの初期化メソッドをテクスチャパスを受け取るように変更しました。

- **ParticleEmitter**: パーティクルの初期化メソッドをテクスチャパスを受け取るように変更し、JSONからのデータ読み込み時に新しいフィールドを追加しました。

- **EmitterData**: パーティクルのスケールや色に関する新しい範囲を持つフィールドを追加し、JSONからの読み込みに対応しました。

- **JSONConvTypeFuncs**: Range型のJSON変換関数を追加し、JSONとの相互変換が可能になりました。

- **JSONファイル**: Box.json、Smoke.json、Spark.jsonのパーティクルプロパティを新しい形式に更新し、スケールや色の範囲を追加しました。

- **ファイル削除**: 不要なファイル（axis.blend、checkerBoard.pngなど）を削除しました。

- **画像ファイル**: circle2.png、monsterBall.png、white1x1.png、SceneChangeGuide.pngを新たに追加し、CG4Task.jsonを追加してパーティクルエミッターの設定を詳細に定義しました。

- **teapot.obj**: 新しいオブジェクトデータを追加し、530個の頂点、800個のテクスチャ頂点、530個の法線、992個の面を含めました。

- **CG4Task1**: CG4Task1.cppおよびCG4Task1.hにおいて、初期化、更新、描画処理に関する新しいメソッドを追加しました。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -329,6 +329,8 @@
     <ClInclude Include="Utility\FilePathSearcher\FilePathSearcher.h" />
     <ClInclude Include="Utility\JSONConvTypeFuncs\JSONConvTypeFuncs.h" />
     <ClInclude Include="Utility\JSONIO\JSONIO.h" />
+    <ClInclude Include="Utility\JSON\jsonutl.h" />
+    <ClInclude Include="Utility\String\strutl.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\ClassDiagram.md" />
