--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Game\Scene\PG3PT1">
       <UniqueIdentifier>{44b516e0-b4d5-4ca2-bc35-107c620bce15}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\CG4Task1">
+      <UniqueIdentifier>{15886c4d-903c-47a4-9d77-074f3c1b4343}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -69,6 +72,9 @@
     <ClCompile Include="Scene\PG3PT1\PG3PT1.cpp">
       <Filter>Game\Scene\PG3PT1</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\CG4Task1\CG4Task1.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -94,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="Scene\PG3PT1\PG3PT1.h">
       <Filter>Game\Scene\PG3PT1</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\CG4Task1\CG4Task1.h">
+      <Filter>Game\Scene\CG4Task1</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
