update: imgui.iniのウィンドウ設定を変更
* `imgui.ini`ファイルのウィンドウ設定を更新しました。
  * `SceneManager`ウィンドウの位置を`272,565`から`278,535`に変更し、サイズを`522,63`に設定。
  * `DebugInfoBar`ウィンドウの位置を`24,29`から`24,17`に変更し、サイズを`8,27`から`8,6`に変更。`DockId`も更新。
  * `Viewport`ウィンドウの`DockId`を変更。

* `DockNode`の設定を調整し、`ID=0x00000008`と`ID=0x0000000A`のノードを追加。親子関係やサイズを設定。

* その他、バイナリファイルやJSONファイルの変更も含まれています。

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -32,7 +32,7 @@ Size=18,27
 Collapsed=0
 
 [Window][SceneManager]
-Pos=272,565
+Pos=278,535
 Size=522,63
 Collapsed=0
 
@@ -52,16 +52,16 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=24,29
+Pos=24,17
+Size=8,6
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][DebugInfo]
+Pos=24,25
 Size=8,27
 Collapsed=0
 DockId=0x0000000A,0
-
-[Window][DebugInfo]
-Pos=24,17
-Size=8,27
-Collapsed=0
-DockId=0x00000008,0
 
 [Window][Viewport]
 Pos=0,0
@@ -587,6 +587,6 @@ DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selec
       DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=901,299 Selected=0x64F50EE5
       DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=278,299 Selected=0x3A93B30B
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=417,301 Split=Y Selected=0x627D110E
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,203 Selected=0x627D110E
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=417,66 Selected=0x8EDA8100
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,40 HiddenTabBar=1 Selected=0x8EDA8100
+      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=417,229 Selected=0x627D110E
 
