feat: 設定管理機能を追加し、各モジュールを更新
- **TextureManager**
  - `ConfigManager` から取得した設定データを使用してテクスチャの検索パスを設定する機能を追加。

- **WinSystem**
  - ウィンドウの初期化時に設定データからクライアントの幅、高さ、タイトルを取得する処理を追加。

- **AudioManager**
  - `ConfigManager` から取得した設定データを使用してオーディオの検索パスを設定する機能を追加。

- **ModelManager**
  - `ConfigManager` から取得した設定データを使用してモデルの自動ロードパスを設定する機能を追加。

- **SceneManager**
  - `ConfigManager` から取得した設定データを使用してスタートアップシーンを予約する機能を追加。

- **NimaFramework**
  - 設定ファイルを読み込む処理を追加し、`ConfigManager` のインスタンスを初期化。

- **ConfigManager**
  - 新たに追加され、設定ファイルの読み込みやデータの取得を行うメソッドを実装。

- **ConfigType**
  - 設定データを JSON 形式に変換する関数を追加し、設定データの構造体を定義。

- **config.json**
  - ウィンドウタイトル、スタートシーン、画面サイズ、モデル、テクスチャ、オーディオのパスを定義した設定ファイルを追加。

- **プロジェクトファイル**
  - `Engine.vcxproj` と `Engine.vcxproj.filters` に `ConfigManager` に関連するソースファイルとヘッダーファイルを追加。

- **SampleProgram**
  - 初期化処理を簡略化し、設定ファイルからのパス追加処理を削除。

- **バイナリファイル**
  - `config.json` を追加し、設定情報を管理。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -190,6 +190,8 @@
   <ItemGroup>
     <ClCompile Include="BaseClasses\ObjectSystemBase.cpp" />
     <ClCompile Include="Common\HRESULT_ASSERT.cpp" />
+    <ClCompile Include="Core\ConfigManager\ConfigManager.cpp" />
+    <ClCompile Include="Core\ConfigManager\ConfigType.cpp" />
     <ClCompile Include="Core\DirectX12\BlendMode.cpp" />
     <ClCompile Include="Core\DirectX12\DirectX12.cpp" />
     <ClCompile Include="Core\DirectX12\DirectX12_Impl.cpp" />
@@ -258,6 +260,8 @@
     <ClInclude Include="Common\define.h" />
     <ClInclude Include="Common\HRESULT_ASSERT.h" />
     <ClInclude Include="Common\structs.h" />
+    <ClInclude Include="Core\ConfigManager\ConfigManager.h" />
+    <ClInclude Include="Core\ConfigManager\ConfigType.h" />
     <ClInclude Include="Core\DirectX12\BlendMode.h" />
     <ClInclude Include="Core\DirectX12\DirectX12.h" />
     <ClInclude Include="Core\DirectX12\Framerate.h" />
