--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -1,25 +1,25 @@
 [Window][Debug##Default]
-Pos=366,-3
+Pos=426,80
 Size=756,957
 Collapsed=0
 
 [Window][Log]
 Pos=0,17
-Size=15,27
+Size=17,22
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000008,0
 
 [Window][Objects]
-Pos=30,0
-Size=4,27
+Pos=29,0
+Size=4,22
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][デバッグ]
 Pos=17,0
-Size=11,27
+Size=10,22
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000004,1
 
 [Window][SRVManager]
 Pos=726,451
@@ -52,28 +52,28 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=24,17
-Size=8,6
+Pos=26,17
+Size=6,22
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000B,0
 
 [Window][DebugInfo]
-Pos=24,25
-Size=8,27
+Pos=26,25
+Size=6,22
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000C,0
 
 [Window][Viewport]
 Pos=0,0
-Size=15,27
+Size=15,22
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][NiUI_DebugInfo]
 Pos=17,0
-Size=11,49
+Size=10,44
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000004,0
 
 [Window][Component data]
 Pos=17,0
@@ -82,10 +82,15 @@ Collapsed=0
 DockId=0x00000004,2
 
 [Window][EventTimer]
-Pos=17,17
-Size=5,27
+Pos=19,17
+Size=5,22
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000006,0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=537,375
+Collapsed=0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -575,18 +580,74 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xF2112B58,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xD426636C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xBFE168FE,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x9A69DAFB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x4B4DC70F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA1DCD5D8,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x257554AB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0F007919,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xD50F6341,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x208AB708,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x74AA2E64,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF020955F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x041308DE,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE3995B3C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
-  DockNode      ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,627 Split=X Selected=0x13926F0B
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1077,450 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=521,450 Split=X Selected=0x8EDA8100
-      DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=422,597 Selected=0x435A4E3F
-      DockNode  ID=0x00000005 Parent=0x00000009 SizeRef=97,597 Selected=0x967E7699
-  DockNode      ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,271 Split=X Selected=0x64F50EE5
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1181,301 Split=X Selected=0x64F50EE5
-      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=901,299 Selected=0x64F50EE5
-      DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=278,299 Selected=0x3A93B30B
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=417,301 Split=Y Selected=0x627D110E
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,40 HiddenTabBar=1 Selected=0x8EDA8100
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=417,229 Selected=0x627D110E
+DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
+  DockNode        ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,710 Split=X Selected=0x13926F0B
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1159,450 CentralNode=1 Selected=0x13926F0B
+    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=439,450 Split=X Selected=0x8EDA8100
+      DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=339,597 Selected=0x435A4E3F
+      DockNode    ID=0x00000005 Parent=0x00000009 SizeRef=98,597 Selected=0x967E7699
+  DockNode        ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,188 Split=X Selected=0x64F50EE5
+    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=901,271 Selected=0x64F50EE5
+    DockNode      ID=0x0000000A Parent=0x00000002 SizeRef=697,271 Split=X Selected=0x3A93B30B
+      DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=337,271 Selected=0x3A93B30B
+      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=358,271 Split=Y Selected=0x627D110E
+        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=320,65 Selected=0x8EDA8100
+        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=320,121 Selected=0x627D110E
 
