feat: デバッグ機能の強化とUIの改善
* `SRVManager.cpp`
  - デバッグウィンドウのコンポーネント名を `#Window` から `Core` に変更
  - ウィンドウモードのフラグを追加し、SRV数の表示を改善

* `DebugManager.cpp`
  - インスタンス取得方法を簡素化し、`PushLog` メソッドを追加
  - ウィンドウ表示やFPSオーバーレイ機能を強化

* `DebugManager.h`
  - 新しい構造体 `ComponentData` を追加し、コンポーネント登録方法を変更

* `ImGuiManager.cpp`
  - デバッグウィンドウのスタイル変更用メソッドを追加し、複数のスタイルオプションを提供

* `ImGuiThemes.cpp`
  - 新しいスタイルを定義し、デバッグウィンドウの外観をカスタマイズ可能に

* `LanguageData.h`
  - ローカライズ用のデータ構造を追加し、UI要素のテキスト管理を強化

* `ParticleManager.cpp` と `ParticleManager.h`
  - 新しいメソッド `Finalize` を追加し、パーティクルリソースの解放機能を強化

* `SceneManager.cpp`
  - デバッグウィンドウのコンポーネント名を変更し、一貫性を持たせる

* `NimaFramework.cpp`
  - フレームワーク終了時にパーティクルマネージャーの `Finalize` メソッドを呼び出すように

* `Color.cpp` と `Color.h`
  - 新しいクラス `HSV` を追加し、色の表現を柔軟に

* `strutl.h`
  - 文字列をハッシュ化する `to_hash` 関数を追加

* `SampleProgram.cpp`
  - デバッグウィンドウのスタイルを `StyleMaterialFlat` に設定

* その他
  - `imgui.ini` のウィンドウ設定を変更
  - バイナリファイルやJSONの変更はなし

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp" />
     <ClCompile Include="DebugTools\EventTimer\EventTimer.cpp" />
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiManager.cpp" />
+    <ClCompile Include="DebugTools\ImGuiManager\ImGuiThemes.cpp" />
     <ClCompile Include="DebugTools\ImGuiTemplates\ImGuiTemplates.cpp" />
     <ClCompile Include="DebugTools\Logger\Logger.cpp" />
     <ClCompile Include="Externals\Timer\Timer.cpp" />
@@ -270,6 +271,7 @@
     <ClInclude Include="Core\DirectX12\RTVHeapCounter.h" />
     <ClInclude Include="Core\DirectX12\SRVManager.h" />
     <ClInclude Include="Core\DirectX12\TextureManager.h" />
+    <ClInclude Include="Core\Localization\LanguageData.h" />
     <ClInclude Include="Core\Win32\WinSystem.h" />
     <ClInclude Include="DebugTools\DebugManager\DebugManager.h" />
     <ClInclude Include="DebugTools\EventTimer\EventTimer.h" />
