--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Log]
 Pos=0,17
-Size=17,22
+Size=17,25
 Collapsed=0
 DockId=0x00000008,0
 
@@ -19,7 +19,7 @@ DockId=0x00000005,0
 Pos=17,0
 Size=10,22
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x0000000D,1
 
 [Window][SRVManager]
 Pos=726,451
@@ -53,9 +53,9 @@ Collapsed=0
 
 [Window][DebugInfoBar]
 Pos=26,17
-Size=6,22
+Size=6,25
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000F,0
 
 [Window][DebugInfo]
 Pos=26,25
@@ -65,25 +65,25 @@ DockId=0x0000000C,0
 
 [Window][Viewport]
 Pos=0,0
-Size=15,22
+Size=15,25
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][NiUI_DebugInfo]
 Pos=17,0
-Size=10,44
+Size=9,47
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000D,0
 
 [Window][Component data]
 Pos=17,0
 Size=9,27
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x0000000D,2
 
 [Window][EventTimer]
 Pos=19,17
-Size=5,22
+Size=5,25
 Collapsed=0
 DockId=0x00000006,0
 
@@ -91,6 +91,24 @@ DockId=0x00000006,0
 Pos=60,60
 Size=537,375
 Collapsed=0
+
+[Window][Performance]
+Pos=26,25
+Size=6,25
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Debug]
+Pos=17,0
+Size=9,25
+Collapsed=0
+DockId=0x0000000D,1
+
+[Window][Components]
+Pos=28,0
+Size=4,25
+Collapsed=0
+DockId=0x0000000E,0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -636,18 +654,26 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x191EB9CA,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
-  DockNode        ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,710 Split=X Selected=0x13926F0B
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1159,450 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=439,450 Split=X Selected=0x8EDA8100
-      DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=339,597 Selected=0x435A4E3F
-      DockNode    ID=0x00000005 Parent=0x00000009 SizeRef=98,597 Selected=0x967E7699
-  DockNode        ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,188 Split=X Selected=0x64F50EE5
-    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=901,271 Selected=0x64F50EE5
-    DockNode      ID=0x0000000A Parent=0x00000002 SizeRef=697,271 Split=X Selected=0x3A93B30B
-      DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=337,271 Selected=0x3A93B30B
-      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=358,271 Split=Y Selected=0x627D110E
-        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=320,65 Selected=0x8EDA8100
-        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=320,121 Selected=0x627D110E
+DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
+  DockNode          ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,710 Split=X Selected=0x13926F0B
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=1159,450 CentralNode=1 Selected=0x13926F0B
+    DockNode        ID=0x00000009 Parent=0x00000001 SizeRef=439,450 Split=X Selected=0x8EDA8100
+      DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=339,597 Split=X Selected=0xC4F72FF0
+        DockNode    ID=0x0000000D Parent=0x00000004 SizeRef=314,710 Selected=0x392A5ADD
+        DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=123,710 Selected=0xFCB30AB3
+      DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=98,597 Selected=0x967E7699
+  DockNode          ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,188 Split=X Selected=0x64F50EE5
+    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=901,271 Selected=0x64F50EE5
+    DockNode        ID=0x0000000A Parent=0x00000002 SizeRef=697,271 Split=X Selected=0x3A93B30B
+      DockNode      ID=0x00000006 Parent=0x0000000A SizeRef=337,271 Selected=0x3A93B30B
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=358,271 Split=Y Selected=0x627D110E
+        DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=320,65 Split=Y Selected=0x8EDA8100
+          DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=358,65 Selected=0x8EDA8100
+          DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=358,121 Selected=0x60B79D0E
+        DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=320,121 Selected=0x627D110E
 
