change: リサイズ処理とリソース管理の改善
* `DirectX12.cpp`
  * `Initialize`関数からウィンドウのクライアントサイズ取得コードを削除し、`OnResized`関数を追加。
  * `NewFrame`関数でリソースバリアの状態変更を修正し、`swapChainResources_`を直接参照。
  * `CopyFromRTV`関数でリソースの状態変更を修正し、`gameScreenResource_`と`swapChainResources_`を直接参照。
  * `ChangeStateRTV`関数を削除し、`DX12Helper::ChangeStateResource`を使用。

* `DirectX12.h`
  * `ChangeStateRTV`関数の宣言を削除し、`OnResized`や`ResizeBuffers`関数を追加。
  * `clientWidth_`と`clientHeight_`のメンバ変数を削除し、`WinSystem`から取得するように変更。

* `ResourceStateTracker`
  * 新たに追加され、リソースの状態を管理。

* `WinSystem`
  * フルスクリーンモードを切り替える`ToggleFullScreen`関数を追加。

* `Input`
  * マウスのデータ形式を`DIMOUSESTATE`から`DIMOUSESTATE2`に変更し、`GetWheelDelta`関数を追加。

* `NimaFramework`
  * リサイズ時の処理を追加し、各システムのリサイズ処理を適切に呼び出す。

* `Viewport`
  * リサイズ時の処理を行う`OnResizedBuffers`関数を追加。

* その他
  * `PostEffect`、`Sprite`、`Particle`、`Object3d`クラスでリソースの状態管理を`ResourceStateTracker`を使用するように修正。
  * `imgui.ini`ファイルのウィンドウサイズや位置に関する設定を変更。

* バイナリファイルやJSONの変更は軽微なものです。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -268,6 +268,7 @@
     <ClInclude Include="Core\DirectX12\Framerate.h" />
     <ClInclude Include="Core\DirectX12\Helper\DX12Helper.h" />
     <ClInclude Include="Core\DirectX12\PostEffect.h" />
+    <ClInclude Include="Core\DirectX12\ResourceStateTracker\ResourceStateTracker.h" />
     <ClInclude Include="Core\DirectX12\RTVHeapCounter.h" />
     <ClInclude Include="Core\DirectX12\SRVManager.h" />
     <ClInclude Include="Core\DirectX12\TextureManager.h" />
