change: シェーダーとゲームアイの管理方法を変更
* `Engine.vcxproj` と `Engine.vcxproj.filters`
  - シェーダーファイルのパスを変更し、新しいプロジェクト参照を追加
  - `.editorconfig` ファイルを追加し、いくつかのシェーダーファイルを削除

* `Line.cpp`
  - `pGameEye_` の取得方法を `GetDefaultGameEye()` から `GetSharedGameEye()` に変更
  - `Update()` メソッド内での `vpMatrix` の取得方法を修正

* `Line.h`
  - `SetGameEye()` メソッドの引数をポインタからポインタのポインタに変更

* `LineSystem.h`
  - `GetDefaultGameEye()` メソッドを `GetSharedGameEye()` に変更

* `ParticleEmitter.cpp` と `ParticleEmitter.h`
  - `ModifyGameEye()` メソッドの引数をポインタからポインタのポインタに変更

* `Particle.cpp`
  - `pGameEye_` の取得方法を `GetDefaultGameEye()` から `GetSharedGameEye()` に変更

* `Particle.h`
  - `SetGameEye()` メソッドの引数をポインタからポインタのポインタに変更

* `ParticleSystem.h`
  - デフォルトのゲームアイの設定メソッドと取得メソッドを変更

* `AABB.cpp` と `AABB.h`、`OBB.cpp` と `OBB.h`
  - `ModifyGameEye()` メソッドの引数をポインタからポインタのポインタに変更

バイナリファイルやJSONファイルの変更はありません。

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -586,46 +586,46 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <None Include="..\ClassDiagram.md" />
     <None Include="EngineResources\Shaders\Object3d.hlsli">
       <Filter>HLSL</Filter>
     </None>
-    <None Include="..\SampleProject\EngineResources\Shaders\Sprite.hlsli">
+    <None Include="EngineResources\Shaders\Particle.hlsli">
       <Filter>HLSL</Filter>
     </None>
-    <None Include="..\SampleProject\EngineResources\Shaders\Particle.hlsli">
+    <None Include="EngineResources\Shaders\Sprite.hlsli">
       <Filter>HLSL</Filter>
     </None>
-    <None Include="..\ClassDiagram.md" />
     <None Include="EngineResources\Shaders\Line.hlsli">
       <Filter>HLSL</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="EngineResources\Shaders\Line.VS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Object3d.PS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Object3d.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.VS.hlsl">
+    <FxCompile Include="EngineResources\Shaders\Sprite.PS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.PS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Particle.VS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Particle.PS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
-    <FxCompile Include="EngineResources\Shaders\Line.VS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
-    <FxCompile Include="EngineResources\Shaders\Line.PS.hlsl">
+    <FxCompile Include="EngineResources\Shaders\Sprite.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\WithoutAlpha.CS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Particle.VS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Particle.PS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Line.PS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
   </ItemGroup>
