change: シェーダーとゲームアイの変更
* `Engine.vcxproj`
  - `Sprite.PS.hlsl` シェーダーをビルドから除外
  - `ConfigType.cpp` を新たに追加

* `Engine.vcxproj.filters`
  - `Particle.VS.hlsl` を削除
  - `Sprite.VS.hlsl` を新たに追加

* `Particle.cpp`
  - `GetSharedGameEye()` メソッドを `GetGlobalEye()` に変更

* `AABB.h` と `OBB.h`
  - `pGameEye` の型をポインタからポインタのポインタに変更

* その他
  - バイナリファイルやJSONの変更は軽微

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -432,9 +432,11 @@
     <ClCompile Include="Core\ConfigManager\ConfigManager.cpp">
       <Filter>Core\ConfigManager</Filter>
     </ClCompile>
-    <ClCompile Include="Core\ConfigManager\ConfigType.cpp" />
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiThemes.cpp">
       <Filter>DebugTools\ImGuiManager</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\ConfigManager\ConfigType.cpp">
+      <Filter>Core\ConfigManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -726,9 +728,6 @@
     <FxCompile Include="EngineResources\Shaders\WithoutAlpha.CS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Particle.VS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Particle.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
@@ -742,6 +741,9 @@
       <Filter>HLSL</Filter>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Fullscreen.PS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
   </ItemGroup>
